crates/ferrum-interfaces/tests/ui/vnext/fail/memory_plan_cannot_be_supplied.rs
use ferrum_interfaces::vnext::MemoryPlan;

fn main() {
    let _ = MemoryPlan::new(1, 1, Vec::new());
}
